# scholar-corpus

./: .gitignore  CHANGELOG.md  CLEANUP-AND-PUBLISH.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: acceptance-benchmark.md
src/scholar_corpus/: __init__.py  __main__.py  build.py  catalogue.py  checkpoint.py  cli.py  errors.py  graph.py  join.py  manifest.py  models.py  normalize.py  paths.py  report.py  scope.py
src/scholar_corpus/adapters/: __init__.py  arxiv_kaggle.py  base.py
src/scholar_corpus/enrichment/: __init__.py  base.py  openalex.py
tests/: conftest.py  test_adapter.py  test_build.py  test_checkpoint.py  test_cli.py  test_cli_enrichment.py  test_determinism.py  test_edges_build.py  test_enrichment_build.py  test_graph.py  test_join.py  test_normalize.py  test_openalex.py  test_paths.py  test_resume.py  test_scope.py  test_verify.py
