[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholar-corpus"
version = "1.0.0"
description = "Reproducible, provenance-stamped builder for joined, citation-linked scholarly corpora."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Datasculptures" }]
keywords = ["scholarly", "corpus", "arxiv", "openalex", "citation-graph", "bibliometrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
parquet = ["pyarrow>=14"]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "pyarrow>=14",
]

[project.urls]
Homepage = "https://github.com/Datasculptures/scholar-corpus"
Source = "https://github.com/Datasculptures/scholar-corpus"

[project.scripts]
scholar-corpus = "scholar_corpus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scholar_corpus"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PTH", "RUF", "C4", "TID"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["scholar_corpus"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_any_unimported = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=scholar_corpus --cov-branch --cov-report=term-missing --cov-fail-under=85 --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["scholar_corpus"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true
follow_imports = "skip"
